# pet-shell-tauri

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml
public/pets/maomao-tabby/: pet.json
public/pets/taro/: pet.json
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
