[package]
name = "pet-shell-tauri"
version = "0.1.0"
description = "A tiny cross-platform desktop pet shell for Codex pet assets."
authors = ["lucky"]
edition = "2021"

[lib]
name = "pet_shell_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.0", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2.5.0"
